@@ -1,6 +1,10 @@
 TODO
- - progress dialog while exporting / loading
  - handling two page types (left/right)
+ - progress dialog while exporting / loading
+ - Implement disable filter
+ - Add ability to scale resulting images after cropping
+ - Display page preview instead of original image in image list
+ - Load images in background
 201209
  - Saving / Loading project Settings
  - Exporting project to images
